--- a/pom.xml
+++ b/pom.xml
@@ -604,10 +604,15 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>https://repo1.maven.org/maven2/.m2e/connectors/m2eclipse-egit/0.14.0/N/0.14.0.201504071521/</url>
 				</repository>
+				<!--				<repository>
+									<id>maven-wro4j</id>
+									<layout>p2</layout>
+									<url>https://download.jboss.org/jbosstools/updates/m2e-wro4j/</url>
+								</repository> -->
 				<repository>
 					<id>maven-wro4j</id>
 					<layout>p2</layout>
-					<url>https://download.jboss.org/jbosstools/updates/m2e-wro4j/</url>
+					<url>https://download.jboss.org/jbosstools/updates/m2e-extensions/m2e-wro4j/1.1.0-2014-06-25_06-16-31-H26/</url>
 				</repository>
 				<repository>
 					<id>maven-devtools</id>
@@ -710,10 +715,15 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>https://repo1.maven.org/maven2/.m2e/connectors/m2eclipse-egit/0.14.0/N/0.14.0.201504071521/</url>
 				</repository>
+				<!--				<repository>
+									<id>maven-wro4j</id>
+									<layout>p2</layout>
+									<url>https://download.jboss.org/jbosstools/updates/m2e-wro4j/</url>
+								</repository> -->
 				<repository>
 					<id>maven-wro4j</id>
 					<layout>p2</layout>
-					<url>https://download.jboss.org/jbosstools/updates/m2e-wro4j/</url>
+					<url>https://download.jboss.org/jbosstools/updates/m2e-extensions/m2e-wro4j/1.1.0-2014-06-25_06-16-31-H26/</url>
 				</repository>
 				<repository>
 					<id>maven-devtools</id>
@@ -851,10 +861,15 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>https://repo1.maven.org/maven2/.m2e/connectors/m2eclipse-egit/0.14.0/N/0.14.0.201509090157/</url>
 				</repository>
+				<!--				<repository>
+									<id>maven-wro4j</id>
+									<layout>p2</layout>
+									<url>https://download.jboss.org/jbosstools/updates/m2e-wro4j/</url>
+								</repository> -->
 				<repository>
 					<id>maven-wro4j</id>
 					<layout>p2</layout>
-					<url>https://download.jboss.org/jbosstools/updates/m2e-extensions/m2e-wro4j/</url>
+					<url>https://download.jboss.org/jbosstools/updates/m2e-extensions/m2e-wro4j/1.1.0-2014-06-25_06-16-31-H26/</url>
 				</repository>
 				<repository>
 					<id>maven-devtools</id>
@@ -992,10 +1007,15 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>https://repo1.maven.org/maven2/.m2e/connectors/m2eclipse-egit/0.15.0/N/LATEST</url>
 				</repository>
+				<!--				<repository>
+									<id>maven-wro4j</id>
+									<layout>p2</layout>
+									<url>https://download.jboss.org/jbosstools/updates/m2e-wro4j/</url>
+								</repository> -->
 				<repository>
 					<id>maven-wro4j</id>
 					<layout>p2</layout>
-					<url>https://download.jboss.org/jbosstools/updates/m2e-extensions/m2e-wro4j/</url>
+					<url>https://download.jboss.org/jbosstools/updates/m2e-extensions/m2e-wro4j/1.1.0-2014-06-25_06-16-31-H26/</url>
 				</repository>
 				<repository>
 					<id>maven-devtools</id>
@@ -1133,10 +1153,15 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>https://repo1.maven.org/maven2/.m2e/connectors/m2eclipse-egit/0.15.1/N/LATEST</url>
 				</repository>
+				<!--				<repository>
+									<id>maven-wro4j</id>
+									<layout>p2</layout>
+									<url>https://download.jboss.org/jbosstools/updates/m2e-wro4j/</url>
+								</repository> -->
 				<repository>
 					<id>maven-wro4j</id>
 					<layout>p2</layout>
-					<url>https://download.jboss.org/jbosstools/updates/m2e-extensions/m2e-wro4j/</url>
+					<url>https://download.jboss.org/jbosstools/updates/m2e-extensions/m2e-wro4j/1.1.0-2014-06-25_06-16-31-H26/</url>
 				</repository>
 				<repository>
 					<id>maven-devtools</id>
@@ -1281,10 +1306,15 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>https://repo1.maven.org/maven2/.m2e/connectors/m2eclipse-egit/0.15.1/N/LATEST</url>
 				</repository>
+				<!--				<repository>
+									<id>maven-wro4j</id>
+									<layout>p2</layout>
+									<url>https://download.jboss.org/jbosstools/updates/m2e-wro4j/</url>
+								</repository> -->
 				<repository>
 					<id>maven-wro4j</id>
 					<layout>p2</layout>
-					<url>https://download.jboss.org/jbosstools/updates/m2e-extensions/m2e-wro4j/</url>
+					<url>https://download.jboss.org/jbosstools/updates/m2e-extensions/m2e-wro4j/1.1.0-2014-06-25_06-16-31-H26/</url>
 				</repository>
 				<repository>
 					<id>maven-devtools</id>
@@ -1419,10 +1449,15 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>https://repo1.maven.org/maven2/.m2e/connectors/m2eclipse-egit/0.15.1/N/LATEST</url>
 				</repository>
+				<!--				<repository>
+									<id>maven-wro4j</id>
+									<layout>p2</layout>
+									<url>https://download.jboss.org/jbosstools/updates/m2e-wro4j/</url>
+								</repository> -->
 				<repository>
 					<id>maven-wro4j</id>
 					<layout>p2</layout>
-					<url>https://download.jboss.org/jbosstools/updates/m2e-extensions/m2e-wro4j/</url>
+					<url>https://download.jboss.org/jbosstools/updates/m2e-extensions/m2e-wro4j/1.1.0-2014-06-25_06-16-31-H26/</url>
 				</repository>
 				<repository>
 					<id>maven-devtools</id>
@@ -1557,10 +1592,15 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>https://repo1.maven.org/maven2/.m2e/connectors/m2eclipse-egit/0.15.1/N/LATEST</url>
 				</repository>
+				<!--				<repository>
+									<id>maven-wro4j</id>
+									<layout>p2</layout>
+									<url>https://download.jboss.org/jbosstools/updates/m2e-wro4j/</url>
+								</repository> -->
 				<repository>
 					<id>maven-wro4j</id>
 					<layout>p2</layout>
-					<url>https://download.jboss.org/jbosstools/updates/m2e-extensions/m2e-wro4j/</url>
+					<url>https://download.jboss.org/jbosstools/updates/m2e-extensions/m2e-wro4j/1.1.0-2014-06-25_06-16-31-H26/</url>
 				</repository>
 				<repository>
 					<id>maven-devtools</id>
