--- a/pom.xml
+++ b/pom.xml
@@ -660,20 +660,10 @@ Optional parameters:
 					<url>https://download.eclipse.org/releases/2019-09/</url>
 				</repository>
 				<repository>
-					<id>2019-09-staging</id>
-					<layout>p2</layout>
-					<url>https://download.eclipse.org/staging/2019-09/</url>
-				</repository>
-				<repository>
 					<id>orbit</id>
 					<layout>p2</layout>
 					<url>https://download.eclipse.org/tools/orbit/downloads/drops/R20190827152740/repository</url>
 				</repository>
-<!--				<repository>
-					<id>orbit-s-build</id>
-					<layout>p2</layout>
-					<url>https://download.eclipse.org/tools/orbit/downloads/drops/S20190827152740/repository</url>
-				</repository> -->
 				<repository>
 					<id>mylyn</id>
 					<layout>p2</layout>
@@ -793,6 +783,152 @@ Optional parameters:
 			<modules>
 				<module>features/org.springsource.sts.package.e4.13</module>
 				<module>features/org.springsource.sts.product.e4.13</module>
+			</modules>
+		</profile>
+
+		<profile>
+			<id>e414</id>
+			<properties>
+				<product.project.sts>org.springsource.sts.product.e4.13</product.project.sts>
+				<p2.repository.name>Spring Tool Suite for Eclipse 2019-09</p2.repository.name>
+				<groovy.compiler.feature>org.codehaus.groovy18.feature.feature.group</groovy.compiler.feature>
+				<groovy.compiler.switch>-Dgroovy.compiler.level=18</groovy.compiler.switch>
+			</properties>
+			<repositories>
+				<repository>
+					<id>2019-12</id>
+					<layout>p2</layout>
+					<url>https://download.eclipse.org/releases/2019-12/</url>
+				</repository>
+				<repository>
+					<id>2019-12-staging</id>
+					<layout>p2</layout>
+					<url>https://download.eclipse.org/staging/2019-12/</url>
+				</repository>
+				<repository>
+					<id>orbit</id>
+					<layout>p2</layout>
+					<url>https://download.eclipse.org/tools/orbit/downloads/drops/S20191007144714/repository</url>
+				</repository>
+				<repository>
+					<id>mylyn</id>
+					<layout>p2</layout>
+					<url>https://download.eclipse.org/mylyn/releases/latest</url>
+				</repository>
+				<repository>
+					<id>ajdt</id>
+					<layout>p2</layout>
+					<url>https://download.eclipse.org/tools/ajdt/410/dev/update</url>
+				</repository>
+				<repository>
+					<id>latest-m2e</id>
+					<layout>p2</layout>
+					<url>https://download.eclipse.org/technology/m2e/releases</url>
+				</repository>
+				<repository>
+					<id>latest-m2e-wtp</id>
+					<layout>p2</layout>
+					<url>https://download.eclipse.org/m2e-wtp/releases/1.4/</url>
+				</repository>
+				<repository>
+					<id>swtbot</id>
+					<layout>p2</layout>
+					<url>https://download.eclipse.org/technology/swtbot/releases/latest/</url>
+				</repository>
+				<repository>
+					<id>groovy</id>
+					<layout>p2</layout>
+					<url>https://dist.springsource.org/snapshot/GRECLIPSE/e4.7/</url>
+				</repository>
+				<repository>
+					<id>atlassian</id>
+					<layout>p2</layout>
+					<url>https://update.atlassian.com/atlassian-eclipse-plugin/rest/e3.7</url>
+				</repository>
+				<repository>
+					<id>maven-extras-mirror</id>
+					<layout>p2</layout>
+					<url>https://download.springsource.com/release/TOOLS/third-party/m2e-sts310-signed/</url>
+				</repository>
+				<repository>
+					<id>ajdt-m2e-configurator</id>
+					<layout>p2</layout>
+					<url>https://dist.springsource.org/release/AJDT/configurator-v2/</url>
+				</repository>
+				<repository>
+					<id>maven-egit</id>
+					<layout>p2</layout>
+					<url>https://repo1.maven.org/maven2/.m2e/connectors/m2eclipse-egit/0.15.1/N/LATEST</url>
+				</repository>
+				<!--				<repository>
+									<id>maven-wro4j</id>
+									<layout>p2</layout>
+									<url>https://download.jboss.org/jbosstools/updates/m2e-wro4j/</url>
+								</repository> -->
+				<repository>
+					<id>maven-wro4j</id>
+					<layout>p2</layout>
+					<url>https://download.jboss.org/jbosstools/updates/m2e-extensions/m2e-wro4j/1.1.0-2014-06-25_06-16-31-H26/</url>
+				</repository>
+				<repository>
+					<id>m2e-chromatic</id>
+					<layout>p2</layout>
+					<url>https://dl.bintray.com/sidespin/repo/m2e-chromatic/1.0.1/</url>
+				</repository>
+				<repository>
+					<id>maven-devtools</id>
+					<layout>p2</layout>
+					<url>https://dist.springsource.com/release/TOOLS/mavendevtools/</url>
+				</repository>
+				<repository>
+					<id>maven-dependency-support</id>
+					<layout>p2</layout>
+					<url>https://ianbrandt.github.io/m2e-maven-dependency-plugin/</url>
+				</repository>
+				<repository>
+					<id>latest-cft</id>
+					<layout>p2</layout>
+					<url>https://download.eclipse.org/cft/1.1.1/</url>
+				</repository>
+				<repository>
+					<id>ansi-console</id>
+					<layout>p2</layout>
+					<url>https://dist.springsource.com/release/TOOLS/third-party/ansiconsole</url>
+				</repository>
+<!--				<repository>
+					<id>lsp4j</id>
+					<layout>p2</layout>
+					<url>https://download.eclipse.org/modeling/tmf/xtext/updates/milestones/</url>
+				</repository> -->
+				<repository>
+					<id>latest-buildship-release</id>
+					<layout>p2</layout>
+					<url>https://download.eclipse.org/buildship/updates/e410/releases/</url>
+				</repository>
+				<repository>
+					<id>lsp4e-snapshots</id>
+					<layout>p2</layout>
+					<url>https://download.eclipse.org/lsp4e/snapshots/</url>
+				</repository>
+<!--				<repository>
+					<id>lsp4e-releases</id>
+					<layout>p2</layout>
+					<url>https://download.eclipse.org/lsp4e/0.5.x-snapshots/</url>
+				</repository> -->
+<!--				<repository>
+					<id>sts4-language-servers-specific-release</id>
+					<layout>p2</layout>
+					<url>https://dist.springsource.com/release/TOOLS/sts4-language-servers/20190618/</url>
+				</repository> -->
+				<repository>
+					<id>sts4-language-servers-snapshot</id>
+					<layout>p2</layout>
+					<url>https://dist.springsource.com/snapshot/TOOLS/sts4-language-servers/nightly/</url>
+				</repository>
+			</repositories>
+			<modules>
+				<module>features/org.springsource.sts.package.e4.14</module>
+				<module>features/org.springsource.sts.product.e4.14</module>
 			</modules>
 		</profile>
 
