--- a/features/org.springsource.sts.product.e4.12/pom.xml
+++ b/features/org.springsource.sts.product.e4.12/pom.xml
@@ -361,6 +361,41 @@
 						</goals>
 					</execution>
 
+					<!-- win exe signing reguires the npm module osslsigncode to be installed on the build machine and the corresponding keys to be around in PKCS#12 format -->
+					<execution>
+						<id>win-exe-signing</id>
+						<phase>package</phase>
+						<configuration>
+							<skip>${skip.win.signing}</skip>
+							<target>
+
+								<taskdef resource="net/sf/antcontrib/antcontrib.properties" />
+
+								<exec executable="osslsigncode" failonerror="true">
+									<arg value="sign"/>
+									<arg value="-pkcs12"/>
+									<arg value="${env.WIN_KEY_LOCATION}"/>
+									<arg value="-pass"/>
+									<arg value="${env.bamboo_signing_store_password}"/>
+									<arg value="-n"/>
+									<arg value="Spring Tool Suite 3"/>
+								    <arg value="-i"/>
+								    <arg value="https://spring.io"/>
+								    <arg value="-t"/>
+								    <arg value="http://timestamp.digicert.com"/>
+									<arg value="-in"/>
+									<arg value="${project.build.directory}/products/org.springsource.sts.ide/win32/win32/x86_64/sts-${unqualifiedVersion}.${p2.qualifier}/STS.exe"/>
+									<arg value="-out"/>
+								    <arg value="${project.build.directory}/products/org.springsource.sts.ide/win32/win32/x86_64/sts-${unqualifiedVersion}.${p2.qualifier}/STS.exe"/>
+								</exec>
+
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+
 					<execution>
 						<id>osx-app-signing</id>
 						<phase>package</phase>
