--- a/pom.xml
+++ b/pom.xml
@@ -795,11 +795,11 @@ Optional parameters:
 				<groovy.compiler.switch>-Dgroovy.compiler.level=18</groovy.compiler.switch>
 			</properties>
 			<repositories>
-				<repository>
+<!--				<repository>
 					<id>2019-12</id>
 					<layout>p2</layout>
 					<url>https://download.eclipse.org/releases/2019-12/</url>
-				</repository>
+				</repository> -->
 				<repository>
 					<id>2019-12-staging</id>
 					<layout>p2</layout>
@@ -808,7 +808,7 @@ Optional parameters:
 				<repository>
 					<id>orbit</id>
 					<layout>p2</layout>
-					<url>https://download.eclipse.org/tools/orbit/downloads/drops/S20191007144714/repository</url>
+					<url>https://download.eclipse.org/tools/orbit/downloads/drops/R20191126223242/repository</url>
 				</repository>
 				<repository>
 					<id>mylyn</id>
