--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@ Optional parameters:
 		<!-- individual version path extensions for all the dependencies -->
 		<dist.springide-pathpostfix>${dist.dependencies-version-path}</dist.springide-pathpostfix>
 		<dist.eclipse-integration-commons-version>${dist.dependencies-version-path}</dist.eclipse-integration-commons-version>
-		<dist.eclipse-integration-tcserver-version>${dist.dependencies-version-path}</dist.eclipse-integration-tcserver-version>
+		<dist.eclipse-integration-tcserver-version>4.1.0.RELEASE</dist.eclipse-integration-tcserver-version>
 		<dist.grails-ide-version>${dist.dependencies-version-path}</dist.grails-ide-version>
 
 	</properties>
@@ -554,7 +554,7 @@ Optional parameters:
 		<repository>
 			<id>eclipse-integration-tcserver</id>
 			<layout>p2</layout>
-			<url>https://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-tcserver/${dist.eclipse-integration-tcserver-version}</url>
+			<url>https://dist.springsource.com/release/TOOLS/eclipse-integration-tcserver/${dist.eclipse-integration-tcserver-version}</url>
 		</repository>
 		<repository>
 			<id>eclipse-integration-commons</id>
