--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,8 @@ Optional parameters:
 		<dist.eclipse-integration-tcserver-version>4.1.0.RELEASE</dist.eclipse-integration-tcserver-version>
 		<dist.grails-ide-version>${dist.dependencies-version-path}</dist.grails-ide-version>
 
+		<sts4-language-server-release-version>20201023</sts4-language-server-release-version>
+
 	</properties>
 
 	<modules>
@@ -206,16 +208,6 @@ Optional parameters:
 					<id>lsp4e-releases</id>
 					<layout>p2</layout>
 					<url>https://download.eclipse.org/lsp4e/releases/0.16.0/</url>
-				</repository>
-<!--				<repository>
-					<id>sts4-language-servers-specific-release</id>
-					<layout>p2</layout>
-					<url>https://dist.springsource.com/release/TOOLS/sts4-language-servers/20190618/</url>
-				</repository> -->
-				<repository>
-					<id>sts4-language-servers-snapshot</id>
-					<layout>p2</layout>
-					<url>https://dist.springsource.com/snapshot/TOOLS/sts4-language-servers/nightly/</url>
 				</repository>
 			</repositories>
 			<modules>
@@ -348,16 +340,6 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>https://download.eclipse.org/lsp4e/releases/latest/</url>
 				</repository>
-<!--				<repository>
-					<id>sts4-language-servers-specific-release</id>
-					<layout>p2</layout>
-					<url>https://dist.springsource.com/release/TOOLS/sts4-language-servers/20190618/</url>
-				</repository> -->
-				<repository>
-					<id>sts4-language-servers-snapshot</id>
-					<layout>p2</layout>
-					<url>https://dist.springsource.com/snapshot/TOOLS/sts4-language-servers/nightly/</url>
-				</repository>
 			</repositories>
 			<modules>
 				<module>features/org.springsource.sts.package.e4.17</module>
@@ -489,16 +471,6 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>https://download.eclipse.org/lsp4e/releases/latest/</url>
 				</repository>
-<!--				<repository>
-					<id>sts4-language-servers-specific-release</id>
-					<layout>p2</layout>
-					<url>https://dist.springsource.com/release/TOOLS/sts4-language-servers/20190618/</url>
-				</repository> -->
-				<repository>
-					<id>sts4-language-servers-snapshot</id>
-					<layout>p2</layout>
-					<url>https://dist.springsource.com/snapshot/TOOLS/sts4-language-servers/nightly/</url>
-				</repository>
 			</repositories>
 			<modules>
 				<module>features/org.springsource.sts.package.e4.18</module>
@@ -544,16 +516,11 @@ Optional parameters:
 			<layout>p2</layout>
 			<url>https://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}</url>
 		</repository>
-<!--		<repository>
-			<id>sts4-language-servers-snapshots</id>
-			<layout>p2</layout>
-			<url>https://dist.springsource.com/snapshot/TOOLS/sts4-language-servers/nightly</url>
-		</repository> -->
-<!--		<repository>
+		<repository>
 			<id>sts4-language-servers-releases</id>
 			<layout>p2</layout>
-			<url>https://dist.springsource.com/release/TOOLS/sts4-language-servers</url>
-		</repository> -->
+			<url>https://dist.springsource.com/release/TOOLS/sts4-language-servers/${sts4-language-server-release-version}</url>
+		</repository>
 <!--		<repository>
 			<id>egit</id>
 			<layout>p2</layout>
