--- a/pom.xml
+++ b/pom.xml
@@ -361,11 +361,11 @@ Optional parameters:
 				<groovy.compiler.switch>-Dgroovy.compiler.level=18</groovy.compiler.switch>
 			</properties>
 			<repositories>
-				<repository>
+<!--				<repository>
 					<id>2021-06</id>
 					<layout>p2</layout>
 					<url>https://download.eclipse.org/releases/2021-06/</url>
-				</repository>
+				</repository> -->
 				<repository>
 					<id>2021-06-staging</id>
 					<layout>p2</layout>
@@ -374,7 +374,7 @@ Optional parameters:
 				<repository>
 					<id>orbit</id>
 					<layout>p2</layout>
-					<url>https://download.eclipse.org/tools/orbit/downloads/drops/S20210427185022/repository</url>
+					<url>https://download.eclipse.org/tools/orbit/downloads/drops/R20210602031627/repository</url>
 				</repository>
 				<repository>
 					<id>mylyn</id>
